# q-task

./: .gitignore  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/scripts/: download_and_merge_artifacts.py  merge_local_coverage.py  parse_coverage.py
.github/workflows/: ci.yml  coverage-badge.yml  python-version-badge.yml  test-badge.yml
docs/: best-practices.md  cli-reference.md  configuration.md  error-handling-architecture.md  framework-integrations.md  running-workers.md
docs/examples/: class-based-tasks.md  function-based-tasks.md
src/async_task/: __init__.py  __main__.py  config.py
src/async_task/cli/: config.py  parser.py
src/async_task/cli/commands/: migrate.py
src/async_task/core/: dispatcher.py  driver_factory.py  task.py  worker.py
src/async_task/drivers/: __init__.py  base_driver.py  memory_driver.py  mysql_driver.py  postgres_driver.py  redis_driver.py  sqs_driver.py
src/async_task/integrations/: fastapi.py
src/async_task/seriailzation/: base_serializer.py
src/async_task/serializers/: __init__.py  base_serializer.py  msgpack_serializer.py  orm_handler.py
src/async_task_q/: config.py
src/async_task_q/cli/commands/: migrate.py
src/async_task_q/core/: dispatcher.py  events.py  worker.py
src/asynctasq/: config.py
src/asynctasq/core/: dispatcher.py  monitoring.py  process_task.py  task_service.py  worker.py
src/asynctasq/drivers/: base_driver.py  mysql_driver.py  postgres_driver.py  rabbitmq_driver.py  redis_driver.py  sqs_driver.py
src/asynctasq/serializers/: __init__.py  hooks.py  msgpack_serializer.py  orm_hooks.py  type_hooks.py
src/asynctasq/tasks/: __init__.py  base_task.py  function_task.py  process_task.py  sync_task.py  task_service.py
src/asynctasq/tasks/core/: base_task.py  task_config.py
src/asynctasq/tasks/infrastructure/: process_pool_manager.py
src/asynctasq/tasks/services/: executor.py  serializer.py
src/asynctasq/tasks/types/: async_process_task.py  function_task.py
src/asynctasq/tasks/utils/: execution_helpers.py  logger.py  type_guards.py
tests/infrastructure/: docker-compose.yml
tests/infrastructure/postgres-init/: 02-create-orm-tables.sql  create-orm-tables.sh
tests/integration/drivers/: test_mysql_driver.py  test_mysql_driver_integration.py  test_postgres_driver.py  test_postgres_driver_integration.py  test_rabbitmq_driver_integration.py  test_redis_driver_integration.py  test_sqs_driver.py  test_sqs_driver_integration.py
tests/integration/serializers/: test_orm_handler_integration.py  test_orm_hooks_integration.py
tests/integration/tasks/: test_process_task_integration.py
tests/unit/: test_config.py  test_process_task.py
tests/unit/cli/commands/: test_migrate.py
tests/unit/core/: test_dispatcher.py  test_driver_factory.py  test_events.py  test_monitoring.py  test_task.py  test_task_service.py  test_worker.py
tests/unit/drivers/: test_memory_driver.py  test_mysql_driver.py  test_postgres_driver.py  test_redis_driver.py
tests/unit/integrations/: test_fastapi.py
tests/unit/serializers/: test_hooks.py  test_msgpack_serializer.py  test_orm_handler.py  test_orm_hooks.py
tests/unit/tasks/: test_base_task.py  test_function_task.py  test_process_task.py  test_sync_task.py  test_task_service.py
tests/unit/tasks/core/: test_base_task.py  test_task_edge_cases.py
tests/unit/tasks/infrastructure/: test_process_pool_manager.py
tests/unit/tasks/services/: test_executor.py
tests/unit/tasks/types/: test_async_process_task.py  test_async_task.py  test_function_task.py  test_sync_process_task.py  test_sync_task.py
