[project]
name = "async-task"
version = "0.1.0"
description = "A robust task queue system for Python with async-first design and multi-driver support (Memory/Postgres/MySQL/Redis/AWS SQS) inspired by Laravel"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Adam Refaey" }]
keywords = [
    "queue",
    "task",
    "async",
    "laravel",
    "redis",
    "sqs",
    "background-tasks",
    "worker",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["msgpack>=1.1.0"]

[project.optional-dependencies]
redis = ["redis[hiredis]>=7.1.0"]
sqs = ["aioboto3>=15.5.0", "types-aioboto3[sqs]>=15.5.0"]
postgres = ["asyncpg>=0.30.0", "asyncpg-stubs>=0.30.0"]
mysql = ["asyncmy>=0.2.10"]
sqlite = ["aiosqlite>=0.21.0"]
oracle = ["oracledb>=3.4.1"]
sqlalchemy = ["sqlalchemy>=2.0.44", "greenlet>=3.2.4"]
django = ["django>=5.2.8", "psycopg2-binary>=2.9.11"]
tortoise = ["tortoise-orm>=0.25.1"]
fastapi = ["fastapi>=0.115.0"]

all = [
    "async-task[redis,sqs,postgres,mysql,sqlite,oracle,sqlalchemy,django,tortoise,fastapi]",
]

[project.urls]
Homepage = "https://github.com/adamrefaey/async-task"
Repository = "https://github.com/adamrefaey/async-task"
Issues = "https://github.com/adamrefaey/async-task/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.40.76",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "pre-commit>=4.4.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.3.1",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"] # line too long (handled by formatter)

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-s",
    "-v",
    # "--cov=async_task",
    # "--cov-branch",
    # "--cov-report=term-missing",
    # "--cov-report=html",
]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
